# vector-based-image-recognition-api

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  scripts.py
.github/workflows/: run-tests.yaml
app/: api.py  config.py  config.yaml  default_config.yaml  default_logging.ini  main.py
app/adapters/api/: __init__.py  qdrant.py  tensorflow_serving.py
app/classifier/: __init__.py  image_classifier.py
app/entrypoints/api/: client.py
app/entrypoints/api/stream/: router.py
app/entrypoints/api/v1/: __init__.py  router.py  schemas.py
app/gateway/: __init__.py  qdrant.py  tensorflow_serving.py
app/routers/: health.py  service.py
app/schemas/: __init__.py  input.py
app/service/: __init__.py  classifier.py
app/service_layer/: __init__.py  classifier.py  handlers.py  image_classifier.py
data/: .gitignore
docker/qdrant/: Dockerfile  custom_config.yaml
docker/tensorflow-serving/: Dockerfile
notebooks/: requirements.txt  train_model.ipynb  train_model_arcface.ipynb  train_model_cnn.ipynb
notebooks/modules/: __init__.py
notebooks/modules/arcface/: ArcFaceBlock.py  __init__.py  loss.py
scripts/: clean_search_engine.sh  create_collection.sh
scripts/pyscripts/: check_collection.py  create_collection.py  feed_collection.py
storage/: .gitignore
tests/: test_client.py  test_config.yaml  test_logging.ini
tests/service/: test_classifier.py
