[tool.poetry]
name = "optical-character-recognition"
version = "0.1.0"
description = ""
authors = ["AgRenaud <renaud.aguirrechambilla@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
qdrant-client = "^0.4.1"
requests = "^2.26.0"
envyaml = "^1.9.210927"
opencv-python = "^4.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
