[tool.poetry]
name = "vector-based-image-recognition-api"
version = "0.1.0"
description = ""
authors = ["AgRenaud <renaud.aguirrechambilla@gmail.com>"]
packages = [
  { include = "scripts.py" }
]

[tool.poetry.dependencies]
python = "3.8.10"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
qdrant-client = "^0.4.1"
requests = "^2.26.0"
envyaml = "^1.9.210927"
opencv-python = "^4.5.4"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
coverage = {version = "^6.1.2", extras = ["toml"]}
pylama = "^7.7.1"
jupyter = "^1.0.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = 'scripts:test'
report = 'scripts:report'
format = 'scripts:format'

[tool.coverage.run]
source=['app']
omit=['*/__init__.py']
