[tool.poetry]
name = "vector-based-image-recognition-api"
version = "0.1.0"
description = ""
authors = ["AgRenaud <renaud.aguirrechambilla@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.8.10"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
qdrant-client = "^0.4.1"
requests = "^2.26.0"
envyaml = "^1.9.210927"
python-multipart = "^0.0.5"
opencv-python-headless = "^4.5.5"

[tool.poetry.dev-dependencies]
coverage = {version = "^6.1.2", extras = ["toml"]}
jupyter = "^1.0.0"
black = "^22.3.0"
poethepoet = "^0.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]

  [tool.poe.tasks.format]
  help = "Run black on the code base"
  cmd  = "black app"

  [tool.poe.tasks.test]
  help = "Run test coverage on the code base and display the coverage's report"
  cmd = """
    python -m coverage run -m unittest discover
    python -m coverage report
  """

[tool.coverage.run]
source=['app']
omit=['*/__init__.py']
